Fix crash in downloaded podcasts below API 34
Signed-off-by: Unpublished <unpublished@gmx.net>